# samsja.github.io

./: 404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
blogs/: index.html
blogs/ai-geopolitics/part1/: index.html
blogs/cot/blog/: index.html
blogs/llm_terminal/cursoc_ctrlk_in_terminal/: index.html
blogs/moe_is_the_inverse_of_weight_sharing/blog/: index.html
blogs/rig/part_1/: index.html
blogs/rig/part_2/: index.html
blogs/terminal/time_to_upgrade_your_terminal_stack/: index.html
docs/: README.md  blogs.md
docs/blogs/: 1.md
docs/blogs/cot/: blog.md
docs/blogs/even-more-dense-model/: blog.md
docs/blogs/llm_terminal/: cursoc_ctrlk_in_terminal.md
docs/blogs/moe_is_the_inverse_of_weight_sharing/: blog.md
docs/blogs/rig/: blog.md  part_1.md  part_2.md
docs/blogs/terminal/: time_to_upgrade_your_terminal_stack.md
docs/blogs/the_bitter_lesson_of_training_llm/: blog.md
