[tool.poetry]
name = "my-blog-post"
version = "0.1.0"
description = ""
authors = ["samsja <sami.jaghouar@hotmail.fr>"]
readme = "README.md"
packages = [{include = "my_blog_post"}]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^9.1.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
